--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ anyhow = "1.0"
 mime_guess = "2.0"
 colored = "2.0"
 chrono = "0.4"
+dirs = "5.0"
+lazy_static = "1.4"
 
 [dev-dependencies]
 tempfile = "3.8"
